# data-stack-docker

./: .gitignore  .pre-commit-config.yaml  readme.eraserdiagram
.github/workflows/: CI.yaml
app/: pyproject.toml
infrastructure/airflow/: docker-compose.yml  dockerfile  readme.md
